--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="@dimen/fab_margin"
+
+        app:fabSize="mini"
         android:src="@drawable/ic_add" />
 
     <android.support.design.widget.FloatingActionButton
@@ -36,7 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="60dp"
+        app:fabSize="mini"
         android:visibility="invisible"
         android:src="@drawable/ic_camera" />
 
@@ -45,9 +49,70 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="120dp"
         android:visibility="invisible"
+        app:fabSize="mini"
+        android:src="@drawable/ic_folder" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="180dp"
+        app:fabSize="mini"
+        android:visibility="invisible"
+        android:src="@drawable/ic_folder" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="240dp"
+        android:visibility="invisible"
+        app:fabSize="mini"
+        android:src="@drawable/ic_folder" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="300dp"
+        android:visibility="invisible"
+        app:fabSize="mini"
+        android:src="@drawable/ic_folder" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="360dp"
+        android:visibility="invisible"
+        app:fabSize="mini"
+        android:src="@drawable/ic_folder" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="420dp"
+        android:visibility="invisible"
+        app:fabSize="mini"
+        android:src="@drawable/ic_folder" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="480dp"
+        android:visibility="invisible"
+        app:fabSize="mini"
         android:src="@drawable/ic_folder" />
 
 </android.support.design.widget.CoordinatorLayout>
